--- a/CreArte/Views/Ventas/Index.cshtml
+++ b/CreArte/Views/Ventas/Index.cshtml
@@ -37,10 +37,10 @@
                 VER
             </a>
 
-            <a href="#" class="ua-btn ua-btn-edit is-disabled" id="btnEditar" title="Editar">
+@*             <a href="#" class="ua-btn ua-btn-edit is-disabled" id="btnEditar" title="Editar">
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM21.41 6.34a1 1 0 0 0 0-1.41L19.41 2.6a1 1 0 0 0-1.41 0L16.34 4.26l3.75 3.75L21.41 6.34z"/></svg>
                 MODIFICAR
-            </a>
+            </a> *@
 
             <a href="#" class="ua-btn ua-btn-exportar" id="btnExportar" title="Exportar">
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M5 20h14v-2H5v2zm7-18v10l4-4h-3V2h-2v6H8l4 4z"/></svg>
