--- a/CreArte/Views/Shared/_Layout.cshtml
+++ b/CreArte/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
     @* 4) JS globales de tu app *@
     <script src="~/js/PantallaPrincipal.js" asp-append-version="true"></script>
     <script src="~/js/UsuarioIndex.js" asp-append-version="true"></script>
-    <script src="~/js/UsuarioCreate.js" asp-append-version="true"></script>
+    @* <script src="~/js/UsuarioCreate.js" asp-append-version="true"></script> *@
     <script src="~/js/ui-core.js" asp-append-version="true"></script>
 
     @* 5) Tu módulo global de alertas (depende de SweetAlert2) *@
