--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -34,6 +34,7 @@
         { "unidadesmedida", "Unidades de Medida" },
         { "tiposempaque", "Tipos de Empaque" },
         { "tiposproducto", "Tipos de Producto" },
+        { "permisos", "Permisos" },
         { "tiposcliente", "Tipos de Cliente" }
         // { "empresa", "Empresa" }
     };
